# SHUG2015Tutorial

./: Example-1:-Ferromagnetic-chain.md  Example-3:-Villain-model.md  Examples.md  Exercises.md  README.md
Example01/: Example-1:-Ferromagnetic-chain.md  FerromagneticChain.md
Example01/FMChain/: CMakeLists.txt  Dispersion.cpp  FMDispersion.py  FMavg.py  TwoDimensionalCut.cpp
Example02/: Example-2:-Antiferromagnetic-chain.md  Example-3:-Villain-model.md  VillainModel.md
Example02/Villain/: CMakeLists.txt  FMDispersion.cpp  SC1Dispersion.cpp  SC1Dispersion.py
Example03/: Example-3:-Villain-model.md  YFeO3.md
Example03/YFeO3/: CMakeLists.txt  CommonFunctions.cpp  TwoDimensionalCut.cpp
Example04/: Example-4:-YFeO3.md  MnCoV2O4.md
Example04/MnCoV2O4/: 001cut.py  110cut.py  111cut.py  CMakeLists.txt  MnCoV2O4.cpp  MnCoV2O4.py  main.cpp
Example05/: Example-5:-Spinels.md
Exercise01/: AntiferromagneticChain.md
Exercise02/: SC2Dispersion.md
Exercise02/solution/: CMakeLists.txt  SC2Dispersion.cpp  SC2Dispersion.md  SC2Dispersion.py
Exercise03/: YFeO3.md
Exercise03/solution/: CMakeLists.txt  TwoDimensionalCut.cpp
Exercise04/: FeV2O4.md
Exercise04/solution/: 010disp.py  110disp.py  111disp.py  CMakeLists.txt  FeV2O4.cpp
